--- a/web/css/produtos.css
+++ b/web/css/produtos.css
@@ -72,3 +72,110 @@
 .produto_info ul li:nth-child(even) {
   margin-left: 2px;
 }
+
+/*Orçamento*/
+
+.orcamento {
+  background: #000;
+  width: 100%;
+  margin-top: 60px;
+  padding: 40px 0;
+}
+
+.orcamento h2 {
+  color: #fec63e;
+  padding-top: 40px;
+}
+
+.orcamento h2:after {
+  background: #fec63e;
+}
+
+.form {
+  padding-right: 60px;
+}
+
+.form label {
+  display: block;
+  color: #fff;
+  font-family: Georgia, "Times New Roman", serif;
+  font-size: 18px;
+  line-height: 25px;
+  margin-bottom: 4px;
+}
+
+.form input {
+  display: block;
+  width: 100%;
+  border: 4px solid #fec63e;
+  background: none;
+  padding: 7px 10px;
+  color: #fff;
+  outline: none;
+  font-size: 14px;
+  font-family: Georgia, "Times New Roman", serif;
+  margin-bottom: 10px;
+}
+
+.form textarea {
+  display: block;
+  width: 100%;
+  height: 120px;
+  border: 4px solid #fec63e;
+  background: none;
+  padding: 7px 10px;
+  color: #fff;
+  outline: none;
+  font-size: 14px;
+  font-family: Georgia, "Times New Roman", serif;
+  margin-bottom: 20px;
+}
+
+.form button {
+  background: none;
+  padding: 7px 40px;
+}
+
+.orcamento_dados {
+  color: #fff;
+  margin-top: 5px;
+}
+
+.orcamento_dados h3 {
+  color: #fec63e;
+  font-size: 18px;
+  font-weight: bold;
+  line-height: 25px;
+  text-transform: uppercase;
+}
+
+.orcamento_dados span {
+  display: block;
+  font-size: 18px;
+  font-family: Georgia, "Times New Roman", serif;
+  line-height: 30px;
+}
+
+.dados_email {
+  margin-bottom: 40px;
+}
+
+.orcamento_dados {
+  padding-right: 60px;
+}
+
+.orcamento_dados p {
+  font-size: 14px;
+  font-family: Georgia, "Times New Roman", serif;
+  margin: 8px 0 8px 0;
+}
+
+.orcamento_dados ul li {
+  font-size: 14px;
+  font-family: Georgia, "Times New Roman", serif;
+  padding: 10px 15px;
+}
+
+.orcamento_dados ul li:nth-child(odd) {
+  background: #292929;
+}
