--- a/web/css/styles.css
+++ b/web/css/styles.css
@@ -12,6 +12,7 @@ p {
 
 img {
   display: block;
+  max-width: 100%;
 }
 
 .btn {
@@ -31,7 +32,7 @@ img {
 .btn:hover {
   color: #fff;
   border-color: #fff;
-  transition: 0.3s;
+  transition: all 0.3s ease-out 0s;
 }
 
 .btn.btn_preto:hover {
@@ -183,6 +184,10 @@ img {
   text-align: center;
 }
 
+.produtos_lista li img {
+  margin: 0 auto;
+}
+
 .produtos_lista li h3 {
   font-size: 18px;
   font-weight: bold;
@@ -208,7 +213,7 @@ img {
 
 .produtos_icone {
   background: #000;
-  padding: 50px;
+  padding: 20px;
 }
 
 .call {
